<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="book"
            type="com.be.edbook.service.model.kakao.Book"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:id="@+id/iv_thumbnail"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/book_cover"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_authors"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:thumbnail="@{book.thumbnail}" />

        <TextView
            android:id="@+id/tv_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{book.txtPosition}"
            android:textAlignment="textEnd"
            app:layout_constraintEnd_toStartOf="@+id/tv_authors"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_authors"
            android:layout_width="0dp"
            android:layout_height="19dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{book.txtAuthors}"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tv_position"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{book.title}"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tv_position" />

        <TextView
            android:id="@+id/tv_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/price_label"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@{book.txtPrice}"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/tv_price_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_sale_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/sale_price_label"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/iv_thumbnail"
            app:layout_constraintTop_toBottomOf="@+id/tv_price_label" />

        <TextView
            android:id="@+id/tv_sale_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="8dp"
            android:text="@{book.txtSalePrice}"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_sale_price_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>